* Added box-shadow for coursepickers dropdown to make it more visible * Fixed records name extension oddity

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/flex/flex-main-functionality.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/flex/flex-main-functionality.scss
@@ -58,6 +58,7 @@
     border:1px solid $brd;
     z-index:1;
     box-sizing:border-box;
+    box-shadow:0 5px 10px rgba(0,0,0,0.1);
     
     li {
       font-size:0.9em;   
